<resources>
    <string name="app_name" translatable="false">Doer</string>
    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="edit">Edit</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>
    <string name="export_db">Export</string>
    <string name="import_db">Import</string>
    <string name="pin">Pin</string>
    <string name="sort">Sort</string>
    <string name="undo">Undo</string>
</resources>