...
                }
            }
            LazyColumn(
                modifier = Modifier
                    .padding(horizontal = 10.dp)
                    .fillMaxSize()
                    .testTag("NOTES_SCREEN_LAZY_COLUMN")
            ) {
                item { Spacer(modifier = Modifier.height(noteSeparatorSize.dp)) }
                /** Pinned list */
                items(
                    items = state.notes,
                    key = { it.hashCode() }
...
                                        viewModel.onEvent(NotesEvent.RestoreNote)
                                    }
                                }
                            },
                            modifier = Modifier
                                .animateItemPlacement()
                                .testTag("NOTE_ITEM")
                        )
                        if (noteSeparatorState) {
                            Spacer(modifier = Modifier.height(noteSeparatorSize.dp))
                        }
                    }
                }
...
