...
                            ),
                            cursorBrush = SolidColor(MaterialTheme.colors.onBackground),
                            modifier = Modifier
                                .weight(1f)
                                .padding(8.dp)
                                .fillMaxSize()
                                .testTag("NOTE_EDIT_TEXT_FIELD")
                        )
                        Box(modifier = Modifier.align(Alignment.End)) {
                            IconButton(onClick = { noteInfoExpanded = true }) {
                                Icon(
                                    imageVector = Icons.Rounded.MoreVert,
                                    contentDescription = "Note info"
...
